[gd_scene load_steps=12 format=2]

[ext_resource path="res://common/menu_icons/menu_icons.png" type="Texture" id=1]
[ext_resource path="res://scenes/interface/menu/menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/theme/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/interface/menu_main/MenuMain.gd" type="Script" id=4]
[ext_resource path="res://scenes/interface/interface_commons/button/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/interface/interface_commons/coin_counter/CoinCounter.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=4]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[node name="Menu" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="LabelTitle" parent="ColorRect" index="0"]
margin_left = 25.0
margin_top = 5.0
margin_right = 116.0
margin_bottom = 18.0
text = "Dinossaur Run"

[node name="CoinContainer" parent="ColorRect" index="1" instance=ExtResource( 6 )]
margin_left = -167.0
margin_top = 5.0
margin_right = -93.0
margin_bottom = 45.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect" index="2"]
margin_left = -157.0
margin_top = -17.0
margin_right = -28.0
margin_bottom = 23.0

[node name="LabelTitle" type="Label" parent="ColorRect/HBoxContainer" index="0"]
margin_top = 13.0
margin_right = 70.0
margin_bottom = 26.0
text = "HighScore:"

[node name="LabelHighscoreValue" type="Label" parent="ColorRect/HBoxContainer" index="1"]
margin_left = 74.0
margin_top = 13.0
margin_right = 129.0
margin_bottom = 26.0
rect_min_size = Vector2( 55, 0 )
text = "0"
clip_text = true

[node name="VBoxContainer" parent="ColorRect" index="3"]
margin_top = 24.0
margin_bottom = -9.0
custom_constants/separation = 8

[node name="ButtonPlay" parent="ColorRect/VBoxContainer" index="0" instance=ExtResource( 5 )]
margin_top = 0.0
margin_bottom = 19.0
icon = SubResource( 4 )

[node name="ButtonStats" type="Button" parent="ColorRect/VBoxContainer" index="1"]
margin_top = 27.0
margin_right = 86.0
margin_bottom = 46.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Stats"
icon = SubResource( 1 )

[node name="ButtonShop" parent="ColorRect/VBoxContainer" index="2" instance=ExtResource( 5 )]
margin_top = 54.0
margin_bottom = 73.0
text = "Shop"
icon = SubResource( 5 )

[node name="ButtonSettings" type="Button" parent="ColorRect/VBoxContainer" index="3"]
margin_top = 81.0
margin_right = 86.0
margin_bottom = 100.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Settings"
icon = SubResource( 2 )

[node name="ButtonExit" type="Button" parent="ColorRect/VBoxContainer" index="4"]
margin_top = 108.0
margin_right = 86.0
margin_bottom = 127.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Exit"
icon = SubResource( 3 )

[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonStats" to="." method="_on_ButtonStats_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonShop" to="." method="_on_ButtonShop_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
